--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 zhengxian<link rel="stylesheet" type="text/css" href="/css/main.css">
 <!DOCTYPE html>
-<html long=zh-cn>
+<html lang=zh-cn>
   <head>
     <title> 正弦 </title>
   </head>
