--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
-<link rel="stylesheet" type="text/css" href="/css/main.css">
 <!DOCTYPE html>
-<html lang=zh-cn>
-  <head>
-    <title> 正弦 </title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li> <a herf = "/"> Home </a> </li>
-        <li> <a herf = "/about"> About </a> </li>
-        <li> <a herf = "/cv"> CV </a> </li>
-        <li> <a herf = "/blog"> Blog </a> </li>
-      </ul>
-    </nav>
-    <div class="container">
-      <div class="blurb">
-        <h1>Hi there, I'm Hank Quinlan!</h1>
-        <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> </p>
-      </div>
-      <!-- /.blurb -->
-    </div><!--/.container -->
-    <footer>
-      <ul>
-        <li> <a herf = "mailto:18210938202@163.com"> Email </a> </li>
-        <li> <a herf = "https://github.com/Sinanimise"> github.com/Sinanimise </a> </li>
-      </ul>
-    </footer>
-  </body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dpslove</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="header">
+        <h1>dpslove</h1>
+        <nav>
+            <ul>
+                <li><a href="page1.html">子网页1</a></li>
+                <li><a href="page2.html">子网页2</a></li>
+                <li><a href="page3.html">子网页3</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="content">
+        <h2>hi，这里是 dpslove</h2>
+        <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。</p>
+    </div>
+    <div class="games">
+        <div class="game">
+            <img src="game1.jpg" alt="游戏1">
+            <div class="description">
+                <h3>游戏1名称</h3>
+                <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
+            </div>
+        </div>
+        <div class="game">
+            <img src="game2.jpg" alt="游戏2">
+            <div class="description">
+                <h3>游戏2名称</h3>
+                <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
