--- a/index.html
+++ b/index.html
@@ -17,24 +17,28 @@
             </ul>
         </nav>
     </div>
-    <div class="content">
-        <h2>hi，这里是 dpslove</h2>
-        <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。</p>
-    </div>
-    <div class="games">
-        <div class="game">
-            <img src="game1.jpg" alt="游戏1">
-            <div class="description">
-                <h3>游戏1名称</h3>
-                <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
-            </div>
+    <div class="main-content">
+        <div class="title-with-image">
+            <h2>hi，这里是 dpslove</h2>
+            <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。</p>
+            <img src="side-image.jpg" alt="右侧图片" class="side-image">
         </div>
-        <div class="game">
-            <img src="game2.jpg" alt="游戏2">
-            <div class="description">
-                <h3>游戏2名称</h3>
-                <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+        <div class="games">
+            <div class="game">
+                <img src="game1.jpg" alt="游戏1">
+                <div class="description">
+                    <h3>游戏1名称</h3>
+                    <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
+                </div>
             </div>
+            <div class="game">
+                <img src="game2.jpg" alt="游戏2">
+                <div class="description">
+                    <h3>游戏2名称</h3>
+                    <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+                </div>
+            </div>
+            <!-- 更多游戏可以在这里继续添加 -->
         </div>
     </div>
 </body>
