--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="title-with-image">
             <h2>hi，这里是 dpslove</h2>
             <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。</p>
-            <img src="side-image.jpg" alt="右侧图片" class="side-image">
+            <img src="side-image.jpg" alt="右侧图片" class="image/side-image">
         </div>
         <div class="games">
             <div class="game">
