--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>hi，这里是 dpslove</h2>
             <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是正文内容，放置在标题下方。</p>
         </div>
-        <img src="side-image.jpg" alt="右侧图片" class="image/side-image">
+        <img src="side-image.jpg" alt="右侧图片" class="image/side-image.jpg">
         <div class="games">
             <div class="game">
                 <img src="game1.jpg" alt="游戏1">
