--- a/index.html
+++ b/index.html
@@ -22,23 +22,27 @@
             <h2>hi，这里是 dpslove</h2>
             <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是正文内容，放置在标题下方。</p>
         </div>
-        <img src="image/side-image" alt="右侧图片" class="side-image">
-        <div class="games">
-            <div class="game">
-                <img src="game1.jpg" alt="游戏1">
-                <div class="description">
-                    <h3>游戏1名称</h3>
-                    <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
-                </div>
+        <div class="content">
+            <div class="side-image">
+                <img src="image/side-image.jpg" alt="右侧图片">
             </div>
-            <div class="game">
-                <img src="game2.jpg" alt="游戏2">
-                <div class="description">
-                    <h3>游戏2名称</h3>
-                    <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+            <div class="games">
+                <div class="game">
+                    <img src="game1.jpg" alt="游戏1">
+                    <div class="description">
+                        <h3>游戏1名称</h3>
+                        <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
+                    </div>
                 </div>
+                <div class="game">
+                    <img src="game2.jpg" alt="游戏2">
+                    <div class="description">
+                        <h3>游戏2名称</h3>
+                        <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+                    </div>
+                </div>
+                <!-- 更多游戏可以在这里继续添加 -->
             </div>
-            <!-- 更多游戏可以在这里继续添加 -->
         </div>
     </div>
 </body>
