--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main-content">
         <div class="title">
             <h2>hi，这里是 dpslove</h2>
-            <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是正文内容，放置在标题下方。</p>
+            <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是内容，放置在标题下方。</p>
         </div>
         <div class="content">
             <div class="side-image">
