--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="content">
             <div class="side-image">
-                <img src="image/side-image.jpg" alt="右侧图片">
+                <img src="image/side-image" alt="右侧图片">
             </div>
             <div class="games">
                 <div class="game">
