--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dpslove</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
@@ -20,29 +20,24 @@
     <div class="main-content">
         <div class="title">
             <h2>hi，这里是 dpslove</h2>
-            <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是内容，放置在标题下方。</p>
+            <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是正文内容，放置在标题下方。</p>
         </div>
-        <div class="content">
-            <div class="side-image">
-                <img src="image/side-image" alt="右侧图片">
-            </div>
-            <div class="games">
-                <div class="game">
-                    <img src="game1.jpg" alt="游戏1">
-                    <div class="description">
-                        <h3>游戏1名称</h3>
-                        <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
-                    </div>
+        <div class="games">
+            <div class="game">
+                <img src="game1.jpg" alt="游戏1">
+                <div class="description">
+                    <h3>游戏1名称</h3>
+                    <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
                 </div>
-                <div class="game">
-                    <img src="game2.jpg" alt="游戏2">
-                    <div class="description">
-                        <h3>游戏2名称</h3>
-                        <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
-                    </div>
-                </div>
-                <!-- 更多游戏可以在这里继续添加 -->
             </div>
+            <div class="game">
+                <img src="game2.jpg" alt="游戏2">
+                <div class="description">
+                    <h3>游戏2名称</h3>
+                    <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+                </div>
+            </div>
+            <!-- 更多游戏可以在这里继续添加 -->
         </div>
     </div>
 </body>
