--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="header">
-        <h1>dpslove</h1>
+        <h1>DPSLove-Sinα</h1>
         <nav>
             <ul>
-                <li><a href="page1.html">子网页1</a></li>
+                <li><a href="">首页</a></li>
                 <li><a href="page2.html">子网页2</a></li>
                 <li><a href="page3.html">子网页3</a></li>
             </ul>
@@ -19,8 +19,8 @@
     </div>
     <div class="main-content">
         <div class="title">
-            <h2>hi，这里是 dpslove</h2>
-            <p>正文介绍空间，这里可以写一些关于dpslove的介绍信息。这里是正文内容，放置在标题下方。</p>
+            <h2>hi，这里是<ruby>DPS<rt>damage per hit</rt></ruby>Love-Sinα</h2>
+            <p>想查成分？请看下面↓</p>
         </div>
         <div class="games">
             <div class="game">
