--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>DPSLove-Sinα</h1>
+        <h1>DPSLove-Sinα's Website</h1>
         <nav>
             <ul>
                 <li><a href="">首页</a></li>
@@ -19,7 +19,7 @@
     </div>
     <div class="main-content">
         <div class="title">
-            <h2>hi，这里是<ruby>DPS<rt>damage per hit</rt></ruby>Love-Sinα</h2>
+            <h2>hi，这里是<ruby>DPS<rt>Damage Per Second</rt></ruby>Love-Sinα</h2>
             <p>想查成分？请看下面↓</p>
         </div>
         <div class="games">
