--- a/index.html
+++ b/index.html
@@ -2,42 +2,54 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dpslove</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="header">
+    <div class="head">
         <h1>DPSLove-Sinα's Website</h1>
         <nav>
             <ul>
                 <li><a href="">首页</a></li>
-                <li><a href="page2.html">子网页2</a></li>
-                <li><a href="page3.html">子网页3</a></li>
+                <li><a href="arknight.html">扩展：无名方舟</a></li>
+                <li><a href="jojo.html">扩展：JO杀</a></li>
             </ul>
         </nav>
     </div>
-    <div class="main-content">
+    <div class="content">
         <div class="title">
-            <h2>hi，这里是<ruby>DPS<rt>Damage Per Second</rt></ruby>Love-Sinα</h2>
+            <h2>hi，这里是<ruby>D&nbsp&nbspP&nbsp&nbspS<rt>Damage Per Second</rt></ruby>Love-Sinα</h2>
             <p>想查成分？请看下面↓</p>
         </div>
         <div class="games">
             <div class="game">
-                <img src="game1.jpg" alt="游戏1">
+                <img src="image/arknight" alt="明日方舟">
                 <div class="description">
-                    <h3>游戏1名称</h3>
-                    <p>这里是游戏1的描述，介绍游戏的特点和玩法。</p>
+                    <h3>明日方舟</h3>
+                    <p>鹰角网络开发的奇妙塔防游戏</p>
                 </div>
             </div>
             <div class="game">
-                <img src="game2.jpg" alt="游戏2">
+                <img src="image/starrail" alt="崩坏：星穹铁道">
                 <div class="description">
-                    <h3>游戏2名称</h3>
-                    <p>这里是游戏2的描述，介绍游戏的特点和玩法。</p>
+                    <h3>崩坏：星穹铁道</h3>
+                    <p>米哈游开发的奇妙回合制游戏</p>
                 </div>
             </div>
-            <!-- 更多游戏可以在这里继续添加 -->
+            <div class="game">
+                <img src="image/sgs" alt="三国杀">
+                <div class="description">
+                    <h3>游戏2名称</h3>
+                    <p>狗卡开发的构史卡牌游戏<br><i>“威震华夏的武圣关云长拥有将红牌当杀的神技,而历史角落的无名小卒却只能一轮七十牌”</i></p>
+                </div>
+            </div>
+            <div class="game">
+                <img src="image/majsoul" alt="雀魂麻将">
+                <div class="description">
+                    <h3>雀魂麻将</h3>
+                    <p>猫粮开发的奇妙线上立直麻将平台</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
