--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="game">
                 <img src="image/sgs" alt="三国杀">
                 <div class="description">
-                    <h3>游戏2名称</h3>
+                    <h3>三国杀</h3>
                     <p>狗卡开发的构史卡牌游戏<br><i>“威震华夏的武圣关云长拥有将红牌当杀的神技,而历史角落的无名小卒却只能一轮七十牌”</i></p>
                 </div>
             </div>
