--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="content">
         <div class="title">
-            <h2>hi，这里是<ruby>DPS<rt>Damage Per Second</rt></ruby>Love-Sinα</h2>
+            <h2>hi，这里是<ruby>D&nbspP&nbspS<rt>Damage Per Second</rt></ruby>Love-Sinα</h2>
             <p>想查成分？请看下面↓</p>
         </div>
         <div class="games">
