--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             <ul>
                 <li><a href="">首页</a></li>
                 <li><a href="arknight.html">扩展：无名方舟</a></li>
-                <li><a href="jojo.html">扩展：JO杀</a></li>
             </ul>
         </nav>
     </div>
@@ -23,28 +22,28 @@
         </div>
         <div class="games">
             <div class="game">
-                <img src="image/arknight" alt="明日方舟">
+                <img src="image/arknight.png" alt="明日方舟">
                 <div class="description">
                     <h3>明日方舟</h3>
                     <p>鹰角网络开发的奇妙塔防游戏</p>
                 </div>
             </div>
             <div class="game">
-                <img src="image/starrail" alt="崩坏：星穹铁道">
+                <img src="image/starrail.png" alt="崩坏：星穹铁道">
                 <div class="description">
                     <h3>崩坏：星穹铁道</h3>
                     <p>米哈游开发的奇妙回合制游戏</p>
                 </div>
             </div>
             <div class="game">
-                <img src="image/sgs" alt="三国杀">
+                <img src="image/sgs.png" alt="三国杀">
                 <div class="description">
                     <h3>三国杀</h3>
                     <p>狗卡开发的构史卡牌游戏<br><i>“威震华夏的武圣关云长拥有将红牌当杀的神技,而历史角落的无名小卒却只能一轮七十牌”</i></p>
                 </div>
             </div>
             <div class="game">
-                <img src="image/majsoul" alt="雀魂麻将">
+                <img src="image/majsoul.png" alt="雀魂麻将">
                 <div class="description">
                     <h3>雀魂麻将</h3>
                     <p>猫粮开发的奇妙线上立直麻将平台</p>
