--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>dpslove</title>
+    <title>正弦</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
