--- a/arknight.html
+++ b/arknight.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="css/arknight.css">
 </head>
 <body>
-    <head>
-        <h1>扩展：无名方舟</h1>
-    </head>
-    <nav>
-        <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="">扩展：无名方舟</a></li>
-        </ul>
-    </nav>
+    <div class="head">
+        <h1>DPSLove-Sinα's Website</h1>
+        <nav>
+            <ul>
+                <li><a href="">首页</a></li>
+                <li><a href="arknight.html">扩展：无名方舟</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="content">
         <div class="introduction">
             <h2>无名方舟是三国杀民间版本——无名杀的一个扩展，将三国杀的游戏机制与明日方舟的干员结合，创造全新的卡牌</h2>
