--- a/arknight.html
+++ b/arknight.html
@@ -10,8 +10,8 @@
         <h1>DPSLove-Sinα's Website</h1>
         <nav>
             <ul>
-                <li><a href="">首页</a></li>
-                <li><a href="arknight.html">扩展：无名方舟</a></li>
+                <li><a href="index.heml">首页</a></li>
+                <li><a href="">扩展：无名方舟</a></li>
             </ul>
         </nav>
     </div>
