--- a/arknight.html
+++ b/arknight.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>DPSLove-Sinα's Website</title>
+    <title>正弦</title>
     <link rel="stylesheet" href="css/arknight.css">
 </head>
 <body>
