--- a/arknight.html
+++ b/arknight.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>正弦</title>
-    <link rel="stylesheet" href="css/arknight.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="head">
