--- a/arknight.html
+++ b/arknight.html
@@ -22,29 +22,48 @@
         <div class="characters">
             <div class="character">
                 <div class="character-image">
-                    <img src="path-to-character1-image.jpg" alt="角色1立绘">
+                    <img src="image/ark_ling.jpg" alt="令">
                 </div>
                 <div class="character-description">
-                    <h3>角色1名称</h3>
-                    <p>这里是角色1的详细描述。介绍角色的背景故事、性格特点和在游戏中的作用。</p>
+                    <h3>令&nbsp3/6</h3>
+                    <p>【诗意】锁定技，出牌阶段开始时，你将体力上限减少至体力值（最低为3），
+                        然后你选择任意张手牌与等量其他角色，将这些牌随机置于这些角色的武将牌上各一张，称为“逸”。
+                        有“逸”的角色攻击范围+2，其造成伤害时选择一项：①交给你一张手牌；②令你增加一点体力上限，然后其获得其武将牌上的一张“逸”。
+                        当你的体力上限减少时，你可以摸等同于变化量的牌<br>
+                        【挥毫】出牌阶段限一次，你可以弃置一张非基本牌并指定一名其他角色，
+                        令所有有“逸”且不为该角色的其他角色各摸一张牌并选择一项
+                        ①对该角色使用一张杀；②令你增加一点体力上限。<br>
+                        【进酒】限定技，一名有“逸”的角色回合开始时，若场上有不小于两名角色武将牌上有“逸”，
+                        你可以将所有“逸”移动到该武将牌上并令其摸X张牌，然后其本回合使用牌无次数和距离限制，
+                        回合结束时你增加Y点体力上限。（X为移动的“逸”的个数，Y为其造成伤害的次数）
+                    </p>
                 </div>
             </div>
             <div class="character">
                 <div class="character-image">
-                    <img src="path-to-character2-image.jpg" alt="角色2立绘">
+                    <img src="image/ark_archetto.jpg" alt="空弦">
                 </div>
                 <div class="character-description">
-                    <h3>角色2名称</h3>
-                    <p>这里是角色2的详细描述。介绍角色的背景故事、性格特点和在游戏中的作用。</p>
+                    <h3>空弦&nbsp3/3</h3>
+                    <p>【弦难】当你使用【杀】时，你可以摸一张牌并弃置至少一张类别互不相同的牌，然后根据弃置的牌的类别获得以下效果：
+                        基本牌，此杀可额外指定一个目标；锦囊牌，此【杀】的伤害+1；装备牌：此【杀】不可被响应。<br>
+                        【铁弦】结束阶段，若你出牌阶段内未造成过伤害，你可以将一张牌置于你的武将牌上。
+                        锁定技，受到伤害时/准备阶段，你弃置“铁弦”牌，免除此伤害/摸两张牌。
+                        锁定技，你失去“铁弦”牌时可以视为使用一张【杀】，且下一次使用【弦难】时视为弃置此牌。
+                    </p>
                 </div>
             </div>
             <div class="character">
                 <div class="character-image">
-                    <img src="path-to-character3-image.jpg" alt="角色3立绘">
+                    <img src="image/ark_amiyaGuard.jpg" alt="阿米娅·近卫">
                 </div>
                 <div class="character-description">
-                    <h3>角色3名称</h3>
-                    <p>这里是角色3的详细描述。介绍角色的背景故事、性格特点和在游戏中的作用。</p>
+                    <h3>阿米娅（近卫升变）&nbsp4/4</h3>
+                    <p>【奔夜】锁定技，你使用的【杀】无视防具；当你使用杀造成伤害/被闪避后，你可以摸一张牌/视为对其使用一张【杀】并使本回合内不可再使用【奔夜】。<br>
+                        【绝影】限定技，出牌阶段，你可以选择一名角色，你弃置你或其一张牌，若你与其的手牌差不超过1，
+                        你视为对其使用一张杀，然后你可以重复此流程（最多重复X次，X为你的体力上限），
+                        若该角色死亡，你造成的伤害+1直到回合结束，然后你可以再选择一名角色并令重复次数+1
+                    </p>
                 </div>
             </div>
         </div>
