--- a/arknight.html
+++ b/arknight.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
-                <li><a href="">扩展：无名方舟</a></li>
+                <li><a href="">我的扩展：无名方舟</a></li>
             </ul>
         </nav>
     </div>
