--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="">首页</a></li>
-                <li><a href="arknight.html">扩展：无名方舟</a></li>
+                <li><a href="arknight.html">我的扩展：无名方舟</a></li>
             </ul>
         </nav>
     </div>
