--- a/index.html
+++ b/index.html
@@ -51,5 +51,11 @@
             </div>
         </div>
     </div>
+    <footer>
+      <ul>
+        <li> <a herf = "mailto:18210938202@163.com"> Email </a> </li>
+        <li> <a herf = "https://github.com/Sinanimise"> github.com/Sinanimise </a> </li>
+      </ul>
+    </footer>
 </body>
 </html>
