--- a/arknight.html
+++ b/arknight.html
@@ -68,5 +68,13 @@
             </div>
         </div>
     </div>
+    
+    </div>
+    <footer>
+      <ul>
+        <li> <a herf = "mailto:18210938202@163.com"> Email </a> </li>
+        <li> <a herf = "https://github.com/Sinanimise"> github.com/Sinanimise </a> </li>
+      </ul>
+    </footer>
 </body>
 </html>
