--- a/arknight.html
+++ b/arknight.html
@@ -70,7 +70,7 @@
     </div>
     <footer>
       <ul>
-        <li> <a herf = "mailto:18210938202@163.com"> Email </a> </li>
+        <li> <a herf = "mailto:18210938202@163.com"> Email:18210938202@163.com</a> </li>
         <li> <a herf = "https://github.com/Sinanimise"> github.com/Sinanimise </a> </li>
       </ul>
     </footer>
